# python-docx-template

./: .gitignore  .project  CHANGES.rst  MANIFEST.in  Pipfile  README.md  README.rst  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  help-request.md  request-for-enhancement.md
.github/workflows/: codestyle.yml  test.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docxtpl/: __init__.py  __main__.py  _compat.py  docx_patch.py  dvm.py  inline_image.py  listing.py  richtext.py  subdoc.py  template.py
src/docxtpl/: __init__.py  subdoc.py
tests/: cellbg.py  comments.py  complex_vertical_merging.py  custom_jinja_filters.py  doc_properties.py  dynamic_table.py  embedded.py  escape.py  escape_auto.py  footnotes.py  get_undeclared_variables.py  header_footer.py  header_footer_entities.py  header_footer_image.py  header_footer_image_file_obj.py  header_footer_inline_image.py  header_footer_ko.py  header_footer_utf8.py  horizontal_merge.py  inline_image.py  less_cells_after_loop.py  main.py  merge_docx.py  merge_docx_with_render.py  merge_paragraph.py  module_execute.py  multi_rendering.py  nested_for.py  order.py  preserve_spaces.py  replace_picture.py  richtext.py  richtext_and_if.py  richtext_eastAsia.py  richtextparagraph.py  runtests.py  subdoc.py  template_error.py  unescape_jinja2_tags.py  vertical merge.py  (+3 more)
tests/templates/: comments.docx  complex_vertical_merging_tpl.docx  custom_jinja_filters_tpl.docx  doc_properties_tpl.docx  dummy_Excel.xlsx  dummy_PowerPoint.pptx  embedded.docx  embedded_dummy.docx  embedded_dummy2.docx  embedded_embedded_docx_tpl.docx  embedded_main_tpl.docx  escape_tpl.docx  escape_tpl_auto.docx  footnotes_tpl.docx  get_undeclared_variables.docx  header_footer_image_tpl.docx  header_footer_inline_image_tpl.docx  inline_image_tpl.docx  less_cells_after_loop_tpl.docx  merge_docx_master_tpl.docx  merge_docx_subdoc.docx  merge_docx_with_render_master_tpl.docx  merge_docx_with_render_subdoc.docx  merge_paragraph_tpl.docx  module_execute.json  module_execute_tpl.docx  multi_rendering_tpl.docx  nested_for_tpl.docx  order_tpl.docx  preserve_spaces_tpl.docx  real_Excel.xlsx  real_PowerPoint.pptx  replace_picture_tpl.docx  richtext_eastAsia_tpl.docx  richtext_paragraph_tpl.docx  richtext_tpl.docx  template_error_tpl.docx  word2016_tpl.docx
tests/test_files/: cellbg.docx  cellbg_tpl.docx  dynamic_table.docx  dynamic_table_tpl.docx  embedded.docx  embedded_dummy.docx  embedded_embedded_docx.docx  embedded_main_tpl.docx  embedded_static_docx.docx  escape.docx  escape_auto.docx  escape_tpl.docx  escape_tpl_auto.docx  header_footer.docx  header_footer_entities.docx  header_footer_entities_tpl.docx  header_footer_image.docx  header_footer_tpl.docx  header_footer_tpl_utf8.docx  header_footer_utf8.docx  horizontal_merge.docx  horizontal_merge_tpl.docx  inline_image.docx  inline_image_tpl.docx  nested_for.docx  order.docx  order_tpl.docx  replace_picture.docx  richtext.docx  richtext_and_if.docx  richtext_and_if_tpl.docx  richtext_tpl.docx  subdoc.docx  subdoc_tpl.docx  template_error.docx  unescape_jinja2_tags.docx  unescape_jinja2_tags_tpl.docx  vertical_merge.docx  vertical_merge_nested.docx  vertical_merge_nested_tpl.docx  (+2 more)
