[tool.poetry]
name = "docxtpl"
version = "0.20.1"
description = "Python docx template engine"
authors = ["Eric Lapouyade"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
python-docx = "^1.1.2"
docxcompose = "^1.4.0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
twine = "^6.1.0"
mypy = "^1.17.0"
lxml-stubs = "^0.5.1"

[tool.mypy]
pretty = true
python_version = "3.9"
check_untyped_defs = true
exclude = ["docs", "build", "setup.py"]

[[tool.mypy.overrides]]
module = ["docxcompose.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
