[project]
name = "docxtpl"
dynamic = ["version"]
description = "Python docx template engine"
authors = [{name="Eric Lapouyade", email="elapouya@proton.me"}]
readme = "README.rst"
license = "LGPL 2.1"
requires-python = ">=3.7"
classifiers=[
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["jinja2"]
dependencies = [
    "python-docx",
    "jinja2",
    "lxml",
]

[project.optional-dependencies]
subdoc = ["docxcompose"]
docs = ["Sphinx", "sphinxcontrib-napoleon"]

[dependency-groups]
dev = [
    "mypy >=1.17.0; python_version >= '3.9'",
    "lxml-stubs >=0.5.1; python_version >= '3.9'",
    "flake8 >=7.3.0; python_version >= '3.9'"
]

[project.urls]
homepage = "https://github.com/elapouya/python-docx-template"
repository = "https://github.com/elapouya/python-docx-template.git"
document = "https://docxtpl.readthedocs.org"

[tool.pdm]
version = {source="file", path="docxtpl/__init__.py"}

[tool.poetry]
version = '0.0.0'

[tool.poetry-plugin-version]
source = "docxtpl/__init__.py"

[tool.mypy]
pretty = true
python_version = "3.9"
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["docs", "build", "setup.py"]

[[tool.mypy.overrides]]
module = ["docxcompose.*"]
ignore_missing_imports = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
